icon-model/externals/yac/src/core/yac_core.F90


      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_curve_2d_new_c
    end function yac_basic_grid_curve_2d_new_c

    function yac_basic_grid_curve_2d_deg_new_c( &
      name, nbr_vertices, cyclic, lon_vertices, lat_vertices) &
      bind ( C, name='yac_basic_grid_curve_2d_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char) :: name(*)
      integer(kind=c_size_t) :: nbr_vertices(2)
      integer(kind=c_int)    :: cyclic(2)
      real(kind=c_double)    :: lon_vertices(*)
      real(kind=c_double)    :: lat_vertices(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_curve_2d_deg_new_c
    end function yac_basic_grid_curve_2d_deg_new_c

    function yac_basic_grid_unstruct_new_c( &
      name, nbr_vertices, nbr_cells, num_vertices_per_cell, &
      x_vertices, y_vertices, cell_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_int)           :: num_vertices_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_new_c
    end function yac_basic_grid_unstruct_new_c

    function yac_basic_grid_unstruct_deg_new_c( &
      name, nbr_vertices, nbr_cells, num_vertices_per_cell, &
      x_vertices, y_vertices, cell_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_int)           :: num_vertices_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_deg_new_c
    end function yac_basic_grid_unstruct_deg_new_c

    function yac_basic_grid_unstruct_ll_new_c( &
      name, nbr_vertices, nbr_cells, num_vertices_per_cell, &
      x_vertices, y_vertices, cell_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_ll_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_int)           :: num_vertices_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_ll_new_c
    end function yac_basic_grid_unstruct_ll_new_c

    function yac_basic_grid_unstruct_ll_deg_new_c( &
      name, nbr_vertices, nbr_cells, num_vertices_per_cell, &
      x_vertices, y_vertices, cell_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_ll_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_int)           :: num_vertices_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_ll_deg_new_c
    end function yac_basic_grid_unstruct_ll_deg_new_c

    function yac_basic_grid_unstruct_edge_new_c( &
      name, nbr_vertices, nbr_cells, nbr_edges, num_edges_per_cell, &
      x_vertices, y_vertices, cell_to_edge, edge_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_edge_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_size_t), value :: nbr_edges
      integer(kind=c_int)           :: num_edges_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_edge(*)
      integer(kind=c_int)           :: edge_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_edge_new_c
    end function yac_basic_grid_unstruct_edge_new_c

    function yac_basic_grid_unstruct_edge_deg_new_c( &
      name, nbr_vertices, nbr_cells, nbr_edges, num_edges_per_cell, &
      x_vertices, y_vertices, cell_to_edge, edge_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_edge_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_size_t), value :: nbr_edges
      integer(kind=c_int)           :: num_edges_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_edge(*)
      integer(kind=c_int)           :: edge_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_edge_deg_new_c
    end function yac_basic_grid_unstruct_edge_deg_new_c

    function yac_basic_grid_unstruct_edge_ll_new_c( &
      name, nbr_vertices, nbr_cells, nbr_edges, num_edges_per_cell, &
      x_vertices, y_vertices, cell_to_edge, edge_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_edge_ll_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_size_t), value :: nbr_edges
      integer(kind=c_int)           :: num_edges_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_edge(*)
      integer(kind=c_int)           :: edge_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_edge_ll_new_c
    end function yac_basic_grid_unstruct_edge_ll_new_c

    function yac_basic_grid_unstruct_edge_ll_deg_new_c( &
      name, nbr_vertices, nbr_cells, nbr_edges, num_edges_per_cell, &
      x_vertices, y_vertices, cell_to_edge, edge_to_vertex) &
      bind ( C, name='yac_basic_grid_unstruct_edge_ll_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_vertices
      integer(kind=c_size_t), value :: nbr_cells
      integer(kind=c_size_t), value :: nbr_edges
      integer(kind=c_int)           :: num_edges_per_cell(*)
      real(kind=c_double)           :: x_vertices(*)
      real(kind=c_double)           :: y_vertices(*)
      integer(kind=c_int)           :: cell_to_edge(*)
      integer(kind=c_int)           :: edge_to_vertex(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_unstruct_edge_ll_deg_new_c
    end function yac_basic_grid_unstruct_edge_ll_deg_new_c

    function yac_basic_grid_cloud_new_c( &
      name, nbr_points, x_points, y_points) &
      bind ( C, name='yac_basic_grid_cloud_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_points
      real(kind=c_double)           :: x_points(*)
      real(kind=c_double)           :: y_points(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_cloud_new_c
    end function yac_basic_grid_cloud_new_c

    function yac_basic_grid_cloud_deg_new_c( &
      name, nbr_points, x_points, y_points) &
      bind ( C, name='yac_basic_grid_cloud_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)        :: name(*)
      integer(kind=c_size_t), value :: nbr_points
      real(kind=c_double)           :: x_points(*)
      real(kind=c_double)           :: y_points(*)

      ! struct yac_basic_grid *
      type(c_ptr) :: yac_basic_grid_cloud_deg_new_c
    end function yac_basic_grid_cloud_deg_new_c

    function yac_basic_grid_reg_2d_rot_new_c( &
      name, nbr_vertices, cyclic, lon_vertices, lat_vertices, &
      north_pol_lon, north_pol_lat) &
      bind ( C, name='yac_basic_grid_reg_2d_rot_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)     :: name(*)
      integer(kind=c_size_t)     :: nbr_vertices(2)
      integer(kind=c_int)        :: cyclic(2)
      real(kind=c_double)        :: lon_vertices(*)
      real(kind=c_double)        :: lat_vertices(*)
      real(kind=c_double), value :: north_pol_lon
      real(kind=c_double), value :: north_pol_lat

      type(c_ptr) :: yac_basic_grid_reg_2d_rot_new_c
    end function yac_basic_grid_reg_2d_rot_new_c

    function yac_basic_grid_reg_2d_rot_deg_new_c( &
      name, nbr_vertices, cyclic, lon_vertices, lat_vertices, &
      north_pol_lon, north_pol_lat) &
      bind ( C, name='yac_basic_grid_reg_2d_rot_deg_new')

      use, intrinsic :: iso_c_binding

      character(kind=c_char)     :: name(*)
      integer(kind=c_size_t)     :: nbr_vertices(2)
      integer(kind=c_int)        :: cyclic(2)
      real(kind=c_double)        :: lon_vertices(*)
      real(kind=c_double)        :: lat_vertices(*)
      real(kind=c_double), value :: north_pol_lon
      real(kind=c_double), value :: north_pol_lat

      type(c_ptr) :: yac_basic_grid_reg_2d_rot_deg_new_c
    end function yac_basic_grid_reg_2d_rot_deg_new_c

    subroutine yac_basic_grid_compute_cell_areas_c(grid, cell_areas) &
      bind ( C, name='yac_basic_grid_compute_cell_areas')

      use, intrinsic :: iso_c_binding

      type(c_ptr), value  :: grid
      real(kind=c_double) :: cell_areas(*)
    end subroutine yac_basic_grid_compute_cell_areas_c

  end interface

  !------------------------------
  ! Handling of distributed grids
  !------------------------------

  interface

    function yac_dist_grid_pair_new_c(grid_a, grid_b, comm) &
      bind ( C, name='yac_dist_grid_pair_new_f2c' )

      use, intrinsic :: iso_c_binding
      import :: YAC_MPI_FINT_KIND

      type(c_ptr), value                     :: grid_a
      type(c_ptr), value                     :: grid_b
      integer(kind=YAC_MPI_FINT_KIND), value :: comm

      ! struct yac_dist_grid_pair *
      type(c_ptr) :: yac_dist_grid_pair_new_c
    end function yac_dist_grid_pair_new_c

    subroutine yac_dist_grid_pair_delete_c(grid_pair) &
      bind ( C, name='yac_dist_grid_pair_delete' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: grid_pair
    end subroutine yac_dist_grid_pair_delete_c

  end interface

  !-------------------------------
  ! Handling of interpolation grid
  !-------------------------------

  interface

    function yac_interp_grid_new_c( dist_grid_pair,            &
                                    src_grid_name,             &
                                    tgt_grid_name,             &
                                    num_src_fields,            &
                                    src_field_locations,       &
                                    src_field_coordinate_idxs, &
                                    src_field_masks_idxs,      &
                                    tgt_field_location,        &
                                    tgt_field_coordinate_idx,  &
                                    tgt_field_masks_idx)        &
      bind ( C, name='yac_interp_grid_new_f2c' )

      use, intrinsic :: iso_c_binding
